--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 
+# Configuración del DataSource
+spring.datasource.url=jdbc:mysql://localhost:3306/prueba_jpa
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configuración de Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8InnoDBDialect
